logo and list items

--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="mary">Ma<span class="mary-r">r</span>y</h1>
+      <ul>
+        <li>Portfolio</li>
+        <li>Blog</li>
+        <li><button>Hire Me</button></li>
+      </ul>
+    </header>
+  </body>
 </html>
