--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@
         <li><button class="btn-primary">Hire Me</button></li>
       </ul>
     </header>
+    <div class="banner">
+      <div>
+        <h3>Hi, I am</h3>
+        <h1>Sakib Iqbal</h1>
+        <p>
+          Shot what able cold new see hold.Friendly as an betrayed formerly he.
+          Morning because as to society behaved moments
+        </p>
+      </div>
+      <img src="/images/hardy.png" alt="" />
+    </div>
   </body>
 </html>
