--- a/index.html
+++ b/index.html
@@ -14,24 +14,30 @@
     />
   </head>
   <body>
-    <header class="header">
-      <h1 class="mary">Ma<span class="mary-r">r</span>y</h1>
-      <ul>
-        <li>Portfolio</li>
-        <li>Blog</li>
-        <li><button class="btn-primary">Hire Me</button></li>
-      </ul>
-    </header>
-    <div class="banner">
-      <div>
-        <h3>Hi, I am</h3>
-        <h1>Sakib Iqbal</h1>
-        <p>
-          Shot what able cold new see hold.Friendly as an betrayed formerly he.
-          Morning because as to society behaved moments
-        </p>
+    <div class="full-header">
+      <header class="header">
+        <h1 class="mary">Ma<span class="mary-r">r</span>y</h1>
+        <ul>
+          <li>Portfolio</li>
+          <li>Blog</li>
+          <li><button class="btn-primary">Hire Me</button></li>
+        </ul>
+      </header>
+      <div class="banner">
+        <div>
+          <h3 class="banner-first">Hi, I am</h3>
+          <h1 class="myname">Sakib Iqbal</h1>
+          <p class="banner-para">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments
+          </p>
+          <div class="cv-buttons">
+            <button class="btn-primary">Download CV</button>
+            <button class="contact">Contact</button>
+          </div>
+        </div>
+        <img src="/images/hardy.png" alt="" />
       </div>
-      <img src="/images/hardy.png" alt="" />
     </div>
   </body>
 </html>
